Fixed squashed icons.

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -58,7 +58,7 @@ $video-play: 'I';
 		padding-top: 15px;
 		background-color: $bg;
 		position: absolute;
-		height: 85px;
+		height: 100px;
 		width: 100px;
 	}
 }
